force-app/main/default/objects/Good_receipt_notes__c/Good_receipt_notes__c.object-meta.xml
<CustomObject>
    <label>Good receipt note</label>
    <nameField>
        <displayFormat>GRN-{0000}</displayFormat>
        <label>GRN Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Good receipt notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>