force-app/main/default/objects/Good_receipt_notes__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Good receipt notes</relationshipLabel>
    <relationshipName>Good_receipt_notes</relationshipName>
    <type>Lookup</type>
</CustomField>