force-app/main/default/objects/Good_receipt_notes__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Good receipt notes</relationshipLabel>
    <relationshipName>GRN</relationshipName>
    <type>Lookup</type>
</CustomField>