force-app/main/default/objects/Good_receipt_notes__c/fields/Total_Changed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Changed_Quantity__c</fullName>
    <label>Received Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>