force-app/main/default/objects/Good_receipt_notes__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Invoiced Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>